--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <div class="calculator_Container">
             <input type="text" readonly>
             <div class="calculator_buttons">
-                <button class="special">AC</button>
+                <button class="special">delete</button>
                 <button class="special">&times;</button>
                 <button class="special">%</button>
                 <button class="special">&divide;</button>
